fix gmap iframe on mobile

--- a/src/assets/scss/base/_root.scss
+++ b/src/assets/scss/base/_root.scss
@@ -6,6 +6,9 @@
   --calheight: 700px;
   --calwidth: 1200px;
 
+  // maps dimensions
+  --mapheight: 485px;
+  --mapwidth: 800px;
 
   // brand colors (change these to your own brand colors)
   --brand-primary: #deaa0e;
